test/src/e2e_vm_tests/test_programs/should_fail/literal_too_large_for_type/src/main.sw
script;

fn main() {
   let _x:u8 = 256;
}
